--- a/ai/pom.xml
+++ b/ai/pom.xml
@@ -19,6 +19,14 @@
             <artifactId>templates</artifactId>
             <version>0.1.0</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.30</version>
+            <scope>test</scope>
+        </dependency>
+        
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
