--- a/game-tests/pom.xml
+++ b/game-tests/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>a</artifactId>
         <version>0.1.0</version>
     </parent>
-    <artifactId>template-tests</artifactId>
+    <artifactId>game-tests</artifactId>
     <packaging>jar</packaging>
     
     <build>
@@ -46,4 +46,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <name>game-tests</name>
 </project>
