--- a/game-tests/pom.xml
+++ b/game-tests/pom.xml
@@ -32,6 +32,13 @@
             <version>0.1.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <!-- TODO: replace with better logger binding -->
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.30</version>
+            <scope>test</scope>
+        </dependency>
         
         <dependency>
             <groupId>org.junit.jupiter</groupId>
