--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>client</module>
         <module>library-builder-ai</module>
         <module>game-tests</module>
+        <module>game-events-api</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
