--- a/assets/templates/cards/release_the_dogs.json
+++ b/assets/templates/cards/release_the_dogs.json
@@ -6,7 +6,7 @@
     "colors": [
       "WHITE"
     ],
-    "description": "Summon 4 1/1 dogs."
+    "description": "Summon four 1/1 dogs."
   },
   "casts": [
     {
