trying to find cause for bild differences on different platforms

--- a/ai/pom.xml
+++ b/ai/pom.xml
@@ -17,6 +17,7 @@
                 <version>2.22.2</version>
                 <configuration>
                     <trimStackTrace>false</trimStackTrace>
+                    <enableAssertions>true</enableAssertions>
                 </configuration>
             </plugin>
         </plugins>
