--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -121,6 +121,12 @@
             <groupId>com.github.destrostudios.card-gui</groupId>
             <artifactId>card-gui-samples</artifactId>
             <version>e47d98b9480042b93d6addd5f4a6aa7ae218a178</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.projectlombok</groupId>
+                    <artifactId>lombok</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>${jm3.group}</groupId>
@@ -147,12 +153,6 @@
             <groupId>com.simsilica</groupId>
             <artifactId>lemur-proto</artifactId>
             <version>1.11.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <version>3.0.4</version>
-            <type>pom</type>
         </dependency>
 
     </dependencies>
